test bug about collage gap 6

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -577,16 +577,15 @@
         .B4
             order: 3
             height: 100%
-            margin: 2px 0
-            display: none
+            margin-top: 2%
+
         .B2
             order: 2
             height: 100%
-            margin: 2px 0
         .B3
             order: 1
             height: 100%
-            margin: 2px 0
+            margin-bottom: 2%
 
 
 
